--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           DOCKER_USERNAME: "tanulsangal"
           DOCKER_PASSWORD: "abcd@1234"
-        run: echo "${{ secrets.DOCKER_PASS }} | docker login  docker.io -u ${{ secrets.DOCKER_USER }} --password-stdin"
+        run: echo "tanulsangal | docker login  docker.io -u tanulsangal --password-stdin"
 
       - name: Build Docker image
         run: docker build . --file Dockerfile --tag tanulsangal/marketdataserv:latest
